syntax = "proto3";

package pb;

option go_package = "github.com/meterio/supernova/libs/pb;pb";

service Sync {
  rpc GetStatus (GetStatusRequest) returns (GetStatusResponse);
  rpc NotifyBlock (NotifyBlockRequest) returns (NotifyBlockResponse);
  rpc NotifyBlockID (NotifyBlockIDRequest) returns (NotifyBlockIDResponse);
  rpc NotifyTx (NotifyTxRequest) returns (NotifyTxResponse);
  rpc GetTxs (GetTxsRequest) returns (GetTxsResponse);
  rpc GetBlockByID (GetBlockByIDRequest) returns (GetBlockByIDResponse);
  rpc GetBlockIDByNumber(GetBlockIDByNumberRequest) returns (GetBlockIDByNumberResponse);
  rpc GetBlocksFromNumber(GetBlocksFromNumberRequest) returns (GetBlocksFromNumberResponse);
}

message GetStatusRequest {
  uint64 num = 1;
}

message GetStatusResponse {
  bytes genesis_block_id = 1;
  uint64 sys_nano_timestamp = 2;
  bytes best_block_id = 3;
  uint64 best_block_num = 4;
}

// NotifyBlock
message NotifyBlockRequest {
  string peer_id = 1;
  bytes block_bytes = 2;
}

message NotifyBlockResponse {
}

// NotifyBlockID
message NotifyBlockIDRequest {
  string peer_id = 1;
  bytes block_id_bytes = 2;
}

message NotifyBlockIDResponse {
}

// NotifyTx
message NotifyTxRequest {
  string peer_id = 1;
  bytes tx_bytes = 2;
}

message NotifyTxResponse {
}

// GetTxs
message GetTxsRequest {
}

message GetTxsResponse {
  repeated bytes txs_bytes_list = 1;
}

// GetBlockByID
message GetBlockByIDRequest {
  bytes block_id_bytes = 1;
}

message GetBlockByIDResponse {
  bytes block_bytes = 1;
}

// GetBlockIDByNumber
message GetBlockIDByNumberRequest {
  uint64 block_num = 1;
}

message GetBlockIDByNumberResponse {
  bytes block_id_bytes = 1;
}

// GetBlocksFromNumber
message GetBlocksFromNumberRequest {
  uint64 block_num = 1;
}

message GetBlocksFromNumberResponse {
  repeated bytes block_bytes_list = 1;
}









